name:                MazeGenerator
version:             0.1.0.0
synopsis:            A 2D maze generator/solver with OpenGL display
license:             PublicDomain
license-file:        LICENSE
author:              M. G. Meier
maintainer:          mgoremeier@gmail.com

category:            Graphics
build-type:          Simple
cabal-version:       2.0


cabal.project
-- Custom repository for cardano haskell packages, see
-- ouroboros-network/CONTRIBUTING for more
repository cardano-haskell-packages
  url: https://chap.intersectmbo.org/
  secure: True

executable MazeGenerator
  main-is:              Main.hs

  other-modules:        GL
                        MazeGenerator
                        RandomGeneration
                        Types

  ghc-options:          -Wall
                        -O2 -threaded "-with-rtsopts=-N2"

  default-extensions:   LambdaCase
                        MultiWayIf
                        OverloadedStrings

  build-depends:          base                    >=4.17
                        , random                  ^>=1.3
                        , containers
                        , OpenGL                  >=3.0.3
                        , GLUT                    >=2.7.0.16

                        , trace-dispatcher
                        , ekg-core
                        , aeson
                        , time
                        , text

  default-language:     Haskell2010

